--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,15 +7,14 @@ on:
       - master
 
 permissions:
-  contents: read
+  contents: write
+  issues: write
+  pull-requests: write
+  packages: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4
